<resources>
    <string name="app_name">My Movies ~ Insert Movie</string>
    <string name="title">Movie Title</string>
    <string name="titlehint">Enter movie title here</string>
    <string name="genre">Genre</string>
    <string name="genrehint">Enter genre here</string>
    <string name="year">Year</string>
    <string name="yearhint">Enter year of release here</string>
    <string name="rating">Rating</string>
    <string name="insert">INSERT</string>
    <string name="showlist">SHOW LIST</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="cancel">CANCEL</string>
    <string name="pg13">SHOWING ALL PG-13 MOVIES</string>
    <string name="showall">SHOWING ALL MOVIES</string>
    <string-array name="spinRatings">
        <item>G</item>
        <item>PG</item>
        <item>PG13</item>
        <item>NC16</item>
        <item>M18</item>
        <item>R21</item>
    </string-array>
</resources>